@@ -724,7 +724,7 @@ module ActiveMerchant #:nodoc:
         add_mc_sca_recurring(xml, credit_card, parameters, three_d_secure)
         add_mc_program_protocol(xml, credit_card, three_d_secure)
         add_mc_directory_trans_id(xml, credit_card, three_d_secure)
-        add_mc_ucafind(xml, credit_card, three_d_secure)
+        add_mc_ucafind(xml, credit_card, three_d_secure, parameters)
       end
 
       def add_mc_sca_merchant_initiated(xml, credit_card, parameters, three_d_secure)
@@ -753,10 +753,16 @@ module ActiveMerchant #:nodoc:
         xml.tag!(:MCDirectoryTransID, three_d_secure[:ds_transaction_id]) if three_d_secure[:ds_transaction_id]
       end
 
-      def add_mc_ucafind(xml, credit_card, three_d_secure)
+      def add_mc_ucafind(xml, credit_card, three_d_secure, options)
         return unless three_d_secure
 
-        xml.tag! :UCAFInd, '4'
+        if options[:alternate_ucaf_flow]
+          return unless %w(4 6 7).include?(three_d_secure[:eci])
+
+          xml.tag! :UCAFInd, options[:ucaf_collection_indicator] if options[:ucaf_collection_indicator]
+        else
+          xml.tag! :UCAFInd, options[:ucaf_collection_indicator] || '4'
+        end
       end
 
       #=====SCA (STORED CREDENTIAL) FIELDS=====
