@@ -17,6 +17,7 @@
 * CommerceHub: Add billing address name override [yunnydang] #5157
 * StripePI: Add optional ability for 3DS exemption on verify calls [yunnydang] #5160
 * CyberSource: Update stored credentials [sinourain] #5136
+* Orbital: Update to accept UCAF Indicator GSF [almalee24] #5150
 
 == Version 1.136.0 (June 3, 2024)
 * Shift4V2: Add new gateway based on SecurionPay adapter [heavyblade] #4860
